<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015-present, Parse, LLC.
  ~ All rights reserved.
  ~
  ~ This source code is licensed under the BSD-style license found in the
  ~ LICENSE file in the root directory of this source tree. An additional grant
  ~ of patent rights can be found in the PATENTS file in the same directory.
  -->
<resources>
    <string name="parse_app_id">YOUR_APPLICATION_ID</string>
    <string name="parse_client_key">YOUR_CLIENT_KEY</string>

    <string name="app_name">Polarion Live 2015</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_agenda">Agenda</string>
    <string name="title_activity_speakers">Speakers</string>
    <string name="title_activity_register">Register</string>
    <string name="action_logout">Logout</string>
    <string name="username">Username</string>
    <string name="sign_up_label">Sign Up</string>
    <string name="password">Password</string>
    <string name="password_label">Password:</string>
    <string name="already_have_an_account_label">Already Have An Account? Log In!</string>
    <string name="sign_in_label">Sign In</string>
    <string name="dont_have_an_account_label">Don\'t have an account? Signup!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_raffle">RaffleActivity</string>
    <string name="check_marketing_usage">Please consent to marketing usage to enter the raffle.</string>
    <string name="provide_testimonial">Please provide a testimonial to enter the raffle.</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="email">EMail</string>
    <string name="company">Company</string>
    <string name="title">Title</string>
    <string name="fullName">Full Name</string>
    <string name="title_activity_maps">Map</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="enter_username">You need to enter username and password</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_agenda_details">AgendaDetailsActivity</string>

    <string name="hello_world">Hello world!</string>
</resources>
